@@ -140,6 +140,8 @@ performance improvements:
 - speed up mps reader asking paramters only ones
 - speed up in var.c changing some recursive calls into iterative calls and reducing the number of VARFIX event that are
   thrown for fixation, aggregation or multi-aggregations
+- changed emphasis settings: knapsack disaggregation is now allowed in fast presolving, CG-MIP separator disabled in
+  aggressive separation
 
 plugins:
 - added new presolver convertinttobin, which converts bounded integer variables to their binary representation, e.g.
